fixtures/fmt/ok/header_comments.sans
# comment one
# comment two
# sans 0.1
let x = 1
