fixtures/fmt/bad/invalid_token.sans
# sans 0.1
let x = @
